--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resource-pebble",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,10 +19,10 @@
     "mocha": "^2.4.5",
     "mockgoose": "^6.0.2",
     "mongoose": "^4.4.12",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "coffee-script": "^1.10.0"
   },
   "dependencies": {
-    "coffee-script": "^1.10.0",
     "pluralize": "^1.2.1"
   }
 }
