--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resource-pebble",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,12 +14,12 @@
     "body-parser": "^1.15.0",
     "chai": "^3.5.0",
     "chance": "^1.0.2",
+    "coffee-script": "^1.10.0",
     "express": "^4.13.4",
     "mocha": "^2.4.5",
     "mockgoose": "^6.0.2",
     "mongoose": "^4.4.12",
-    "request": "^2.72.0",
-    "coffee-script": "^1.10.0"
+    "request": "^2.72.0"
   },
   "dependencies": {
     "pluralize": "^1.2.1"
