--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "resource-pebble",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "description": "",
     "repository": {
         "type": "git",
@@ -23,6 +23,9 @@
     },
     "author": "",
     "license": "ISC",
+    "peerDependencies": {
+        "express": "^4.13.4"
+    },
     "devDependencies": {
         "async": "^2.0.0-rc.3",
         "body-parser": "^1.15.0",
@@ -30,7 +33,6 @@
         "chance": "^1.0.2",
         "coffee-script": "^1.10.0",
         "dump-die": "^1.0.0",
-        "express": "^4.13.4",
         "mocha": "^2.4.5",
         "mockgoose": "^6.0.2",
         "mongoose": "^4.4.12",
